# recipe-vault

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  CLAUDE.md  CLOUDFLARE_TUNNEL_SETUP.md  Cargo.toml  Dockerfile  MCP.md  Makefile  README.md  ROLLBACK.md  SYNOLOGY.md  TESTING.md  design-system.md  docker-compose.yml  docker-entrypoint.sh  restart_docker.sh
.gemini/commands/: recipe.toml
.github/workflows/: create-tag-v2-3-1.yml  release.yml  test.yml
archive/: capture_display.sh  capture_llm_responses.sh
deploy/: .env.example  README.md  docker-compose.prod.yml  nginx-api-only.conf
migrations/: 20260124000001_create_recipe_tables.sql  20260204000001_add_recipe_authorship.sql  20260210000001_add_difficulty_to_recipes.sql  20260210000002_add_system_flags.sql  20260210120000_baseline_v2_6_1.sql  20260210130000_drop_system_flags.sql  20260211000000_add_recipe_photos.sql  20260212000000_add_share_links.sql  MIGRATION_RESET.md
openspec/: config.yaml  project.md
openspec/specs/: spec-2.md  spec.md
planned-ideas/: meal-planning-epic.md
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
src/ai/: client.rs  difficulty_assessment.rs  llm.rs  mod.rs  prompts.rs
src/backfill/: mod.rs  (+1 more)
static/: app.js  chat.html  chat.js  meal-plan-display.js  navigation.js  page-transitions.js  recipe-display.js  styles.css  timer.js  utils.js
tests/: auth_test.rs  chat_test.rs  common.rs  difficulty_test.rs  docker_test.sh  family_isolation_test.rs  mcp_integration_test.rs  mcp_server_test.rs  photo_upload_test.rs  recipe_navigation.rs  recipes_test.rs
(+301 files in other folders)
