[package]
name = "recipe-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rstest = "0.23"
rstest_reuse = "0.7"
